--- a/twosolve/index.html
+++ b/twosolve/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <!-- <script src="jspm_packages/system.js"></script> -->
-  <!-- <script src="config.js"></script> -->
-  <!-- <script> -->
-  <!--   System.import("./app"); -->
-  <!-- </script> -->
+  <script src="jspm_packages/system.js"></script>
+  <script src="config.js"></script>
+  <script>
+    System.import("./app");
+  </script>
   <style>
     svg { border: 2px solid black; }
   </style>
@@ -13,5 +13,5 @@
   <body>
   <div id="mount"></div>
   </body>
-  <script src="build.js"></script>
+  <!-- <script src="build.js"></script> -->
 </html>
